# IDTracker_PostProcessing_Vince

./: IDTrackerAI_PostProcess_v1.py  Plain_python1_GUI.py  Readme.md  Test_trajectories.csv  Test_trajectories_InqScribe_60px_30fps.txt  Test_trajectories_QA_by_frame.csv  Test_trajectories_pairwise_distances_60px_30.000fps.csv  idtracker_inqscribe_VF_v3.ipynb
idtracker_inqscribe_pkg/: LICENSE  README.md  pyproject.toml
idtracker_inqscribe_pkg/src/idtracker_inqscribe/: cli.py
